istio/01_VirtualService_Canary/istio-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"   # Domain name of the external website
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: myvs  # "just" a name for this virtualservice
  namespace: default
spec:
  hosts:
    - "*"  # The Service DNS (ie the regular K8S Service) name that we're applying routing rules to.
  gateways:
  - ingress-gateway-configuration
  http:
    - route:
        - destination:
            host: mydemoservice.default.svc.cluster.local # The Target DNS name
            subset: one-group  # The name defined in the DestinationRule
          weight: 10
        - destination:
            host: mydemoservice.default.svc.cluster.local # The Target DNS name
            subset: two-group  # The name defined in the DestinationRule
          weight: 90
